build.gradle: Cleanup.