@@ -806,40 +806,6 @@ tasks.distZip.enabled = false
 tasks.distTar.enabled = false
 tasks.startScripts.enabled = false
 
-startScripts {
-    // applicationName = 'neptus'
-    mainClass = 'pt.lsts.neptus.loader.NeptusMain'
-    classpath =  rootProject.files(rootProject.file('lib/*'))
-    executableDir = '.'
-    defaultJvmOpts = [
-        '-Xms10m',
-        '-Xmx2g',
-        '-XX:MaxMetaspaceSize=512m',
-        '-XX:+UseG1GC', //for Java 8+
-        //'-XX:+UseZGC', //for Java 11+
-        '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-Xloggc:$APP_HOME/log', //for Java 8-
-        //"-Xlog:gc*:file=$APP_HOME/log", //for Java 9+
-        '-XX:+HeapDumpOnOutOfMemoryError', '-XX:HeapDumpPath=$APP_HOME/log/heap-dump.hprof',
-        '-Xss256k',
-        ]
-
-    doLast {
-        unixScript.text = unixScript.text.replace('@lib_jni_linux_x64@',
-            getLibJNIFor(['linux'], ['x64', 'x86']).collect { "${relativePathIfOnProjectPath(it, '\$APP_HOME/',)}" }.join(':'))
-        unixScript.text = unixScript.text.replace('@lib_jni_linux_x86@',
-            getLibJNIFor(['linux'], ['x86']).collect { "${relativePathIfOnProjectPath(it, '\$APP_HOME/')}" }.join(':'))
-        unixScript.text = unixScript.text.replace('@lib_jni_osx_x64@',
-            getLibJNIFor(['osx'], ['x64']).collect { "${relativePathIfOnProjectPath(it, '\$APP_HOME/')}" }.join(':'))
-        unixScript.text = unixScript.text.replace('@added_section@', rootProject.file('dist/scripts/unixSnippetRunOptions.txt').getText('UTF-8'))
-
-        windowsScript.text = windowsScript.text.replace('@lib_jni_windows_x64@',
-            getLibJNIFor(['win'], ['x64', 'x86']).collect { "${relativePathIfOnProjectPath(it, '@APP_HOME@/',)}" }.join(';'))
-        windowsScript.text = windowsScript.text.replace('@lib_jni_windows_x86@',
-            getLibJNIFor(['win'], ['x86']).collect { "${relativePathIfOnProjectPath(it, '@APP_HOME@/',)}" }.join(';'))
-        windowsScript.text = windowsScript.text.replace('@added_section@', rootProject.file('dist/scripts/windowsSnippetRunOptions.txt').getText('UTF-8'))
-    }
-}
-
 generateStartScriptsFor(rootProject.name, 'full', 'pt.lsts.neptus.loader.NeptusMain',
     '', 'RunOptions', rootProject.files(rootProject.file('lib/*')))
 generateStartScriptsFor(rootProject.name, 'le', 'pt.lsts.neptus.mc.lauvconsole.LAUVConsole',
